css/style.css
body {
    font-family: Arial, Verdana, sans-serif;
    background-color: #000000;
    color: #ffffff;
    margin-top: 20px;
    margin-left: 20px;
    margin-right: 20px;
}

h1 {
    font-size: 42px;
    text-align: center;
    padding: 15px;
}

/* Style the h2 heading with:
30px dark gray font (#0D0D0D) 
*/

h2 {
    font-size: 30px;
    color: #0D0D0D;
}

/* Style the default paragraphs with: 
24px font
Padding of 10px on the top and left only
*/

p {
    font-size: 24px;
    padding-top: 10px;
    padding-left: 10px;
}

/* Style the default style for images so that:
All images are 250px wide  (do not set a height)
All images are centered 
All images have a white 10px dashed border
*/

img {
    display: block;
    width: 250px;
    margin-left: auto;
    margin-right: auto;
    border: 10px dashed #ffffff;
}

/* Style the default div elements with:
 A flexible height of at least 125px tall 
 Padding of 20px on all sides
A 3px solid white border on all sides.
*/

div {
    min-height: 125px;
    padding: 20px;
    border: 3px solid #ffffff;
}

/* Style the introduction class with:
15px border-radius (to curve the edges)
Margin of  15px margin on the top
Double-spaced text
*/

.introduction {
    border-radius: 15px;
    margin-top: 15px;
    line-height: 2;
}

/* Style the red class with:
Background color is hexadecimal value for red
Text is aligned on the right side 
A left margin of 50px;
A  border of 2px on the bottom and 5px on the left;
 */

.red {
    background-color: #ff0000;
    text-align: right;
    margin-left: 50px;
    border-width: 0px 0px 2px 5px;
}

/* The blue div has the following styles
Background color is hex value for blue
Text is aligned on the left side
A right margin of 50px;
A  border of 5px on the right and 2px on the top;


WAVE YOUR PAGE!!!!  Uh oh.  Let's fix the color contrast here  – Dark on blue is too hard to read.   
The heading and paragraph text should use #C4C4C4
 */

.blue {
    background-color: #0000ff;
    text-align: left;
    margin-right: 50px;
    border-width: 2px 5px 0px 0px;
}

.blue h2, .blue p {
    color: #C4C4C4;
}

/* The yellow div has the following styles
Background color is hexadecimal value for yellow 
Text is aligned on the right side
A left margin of 50px;
A border of 2px on the bottom and 5px on the left;

WAVE YOUR PAGE!!!!  Uh oh.  Let's fix the color contrast here  too
The paragraph text should be #707070.  (Updated 7/7) */

.yellow {
    background-color: #ffff00;
    text-align: right;
    margin-left: 50px;
    border-width: 0px 0px 2px 5px;
}

.yellow p {
    color: #707070;
}

/* The green div has the following styles:
The background color is hexadecimal value for green  (You must use #00EB00, #008500, or #00D800)
Text is aligned on the left side
A right margin of 50px;
A  border of 5px on the right and 2px on the top;
*/

.green {
    background-color: #00EB00;
    text-align: left;
    margin-right: 50px;
    border-width: 2px 5px 0px 0px;
}

/* Style the default footer elements with:
a gradient background that starts at #000000, goes to #0000ff at 25,  #0066ff at 70, and ends back at #000000.
A 5px solid white border.
*/

footer {
    background: rgb(0, 0, 0);
    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 255, 1) 25%, rgba(0, 102, 255, 1) 70%, rgba(0, 0, 0, 1) 100%);
    border: 5px solid #ffffff;
}

/* Style any paragraphs with the footer with:
20px text that is aligned to the right.
Padding of 15px on the top, right, and bottom only. (No padding on the left.)
*/

footer p {
    font-size: 20px;
    text-align: right;
    padding: 15px 15px 15px 0px;
}

